fix(css): blurred tittle

--- a/web/css/artistes.css
+++ b/web/css/artistes.css
@@ -41,7 +41,6 @@ h1::before {
     right: 0;
     bottom: 0;
     background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(10px);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
